<resources>
    <string name="app_name">Homework4</string>
    <string name="c">C</string>
    <string name="button_div">/</string>
    <string name="button_mult">*</string>
    <string name="button_back">Back</string>
    <string name="_7">7</string>
    <string name="_8">8</string>
    <string name="_9">9</string>
    <string name="button_min">-</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="button_plus">+</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="button_equels">=</string>
    <string name="button_proc">%</string>
    <string name="_0">0</string>
    <string name="button_comma">,</string>
</resources>