<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/MyDarkCoolStyle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/image"
    tools:context=".MainActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/c"
        app:layout_constraintBottom_toTopOf="@+id/button7"
        app:layout_constraintEnd_toStartOf="@id/button_div"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_div"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_div"
        app:layout_constraintBottom_toTopOf="@id/button8"
        app:layout_constraintEnd_toStartOf="@+id/button_mult"
        app:layout_constraintStart_toEndOf="@+id/button_clear"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_mult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_mult"
        app:layout_constraintBottom_toTopOf="@id/button9"
        app:layout_constraintEnd_toStartOf="@+id/button_return"
        app:layout_constraintStart_toEndOf="@+id/button_div"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_return"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_back"
        app:layout_constraintBottom_toTopOf="@+id/button_min"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_mult"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_7"
        app:layout_constraintBottom_toTopOf="@+id/button4"
        app:layout_constraintEnd_toStartOf="@id/button8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_clear" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_8"
        app:layout_constraintBottom_toTopOf="@+id/button5"
        app:layout_constraintEnd_toStartOf="@+id/button9"
        app:layout_constraintStart_toEndOf="@+id/button7"
        app:layout_constraintTop_toBottomOf="@+id/button_div" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_9"
        app:layout_constraintBottom_toTopOf="@+id/button6"
        app:layout_constraintEnd_toStartOf="@+id/button_min"
        app:layout_constraintStart_toEndOf="@+id/button8"
        app:layout_constraintTop_toBottomOf="@+id/button_mult" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_min"
        app:layout_constraintBottom_toTopOf="@+id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9"
        app:layout_constraintTop_toBottomOf="@+id/button_return"
        app:layout_constraintVertical_chainStyle="packed" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_4"
        app:layout_constraintBottom_toTopOf="@+id/button1"
        app:layout_constraintEnd_toStartOf="@id/button5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_5"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toStartOf="@+id/button6"
        app:layout_constraintStart_toEndOf="@+id/button4"
        app:layout_constraintTop_toBottomOf="@+id/button8" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_6"
        app:layout_constraintBottom_toTopOf="@+id/button3"
        app:layout_constraintEnd_toStartOf="@+id/button_plus"
        app:layout_constraintStart_toEndOf="@+id/button5"
        app:layout_constraintTop_toBottomOf="@+id/button9" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_plus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_plus"
        app:layout_constraintBottom_toTopOf="@+id/button_equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button6"
        app:layout_constraintTop_toBottomOf="@+id/button_min" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_1"
        app:layout_constraintBottom_toTopOf="@+id/button_proc"
        app:layout_constraintEnd_toStartOf="@id/button2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_2"
        app:layout_constraintBottom_toTopOf="@+id/button_null"
        app:layout_constraintEnd_toStartOf="@+id/button3"
        app:layout_constraintStart_toEndOf="@+id/button1"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button3"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_3"
        app:layout_constraintBottom_toTopOf="@+id/button_comma"
        app:layout_constraintEnd_toStartOf="@+id/button_equal"
        app:layout_constraintStart_toEndOf="@+id/button2"
        app:layout_constraintTop_toBottomOf="@+id/button6" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_equal"
        android:layout_width="@dimen/equal_width"
        android:layout_height="@dimen/equal_height"
        android:text="@string/button_equels"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button3"
        app:layout_constraintTop_toBottomOf="@+id/button_plus" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_proc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_proc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_null"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_comma"
        app:layout_constraintStart_toEndOf="@+id/button_proc"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_comma"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_comma"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_equal"
        app:layout_constraintStart_toEndOf="@+id/button_null"
        app:layout_constraintTop_toBottomOf="@+id/button3" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="@dimen/TV1_w"
        android:layout_height="@dimen/TW1_h"
        android:layout_marginRight="@dimen/TV1_mr"
        android:background="@color/tv2_color"
        android:gravity="center"
        android:text=""
        android:textColor="@color/white"
        android:textSize="@dimen/tv2_textsize"
        app:layout_constraintBottom_toTopOf="@+id/button_return"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="@dimen/TV2_W"
        android:layout_height="@dimen/TV2_H"
        android:layout_marginEnd="@dimen/TV2_ME"
        android:background="@color/tv_color"
        android:text=""
        android:textColor="@color/black"
        android:textSize="@dimen/tv1_textsize"
        app:layout_constraintBottom_toTopOf="@+id/button_div"
        app:layout_constraintEnd_toStartOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <RadioGroup
        android:id="@+id/radioButtons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="MissingConstraints">

    </RadioGroup>

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioButtonMyCoolStyle"
        android:layout_width="334dp"
        android:layout_height="59dp"
        android:layout_marginTop="109dp"
        android:text="Светлая тема"
        android:textSize="@dimen/tv1_textsize"
        app:layout_constraintTop_toTopOf="@+id/button_comma"
        tools:layout_editor_absoluteX="30dp"
        tools:ignore="MissingConstraints" />

    <com.google.android.material.radiobutton.MaterialRadioButton
        android:id="@+id/radioButtonDarkAction"
        android:layout_width="334dp"
        android:layout_height="59dp"
        android:text="Темная тема"
        android:textSize="@dimen/tv1_textsize"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioButtonMyCoolStyle"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="31dp" />


</androidx.constraintlayout.widget.ConstraintLayout>